<resources>
    <string name="app_name">Submisson3</string>

    <string name="title_menu_movies">Movies</string>
    <string name="title_menu_tvshow">TV Show</string>

    <string name="image_poster">Image poster</string>
    <string name="date_relealesed">date_relealesed</string>
    <string name="star_icon">star_icon</string>
    <string name="timer_icon">timer_icon</string>
    <string name="title">Title</string>
    <string name="first_line">first_line</string>
    <string name="second_line">second_line</string>
    <string name="languange">English</string>
    <string name="detail_overview">Detail Overview</string>
    <string name="change_language_settings">Language Configuration</string>


    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
</resources>
